# clavix

./: .claude-init.json  .gitignore  AUDIT_SCOPE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRYPTO.md  DISCLAIMER.md  MANUAL_VALIDATION.md  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  YUBIKEY_UNLOCK.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  svelte.config.js  tsconfig.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dev-build.yml  release-please.yml  release.yml
messages/: en.json  fr.json
project.inlang/: settings.json
scripts/: regen-icons.sh
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: e2e_seed.rs
src-tauri/src/: api.rs  audit.rs  cache.rs  crypto.rs  error.rs  lib.rs  main.rs  models.rs  ssh_agent.rs  state.rs  store.rs  totp.rs  update.rs  webauthn.rs  yubikey_unlock.rs
src-tauri/src/commands/: audit.rs  auth.rs  cipher.rs  import.rs  mod.rs  move_share.rs  ssh.rs  tray.rs  update.rs  vault.rs
src-tauri/src/services/: auth.rs  cipher.rs  mod.rs  vault.rs
src-tauri/tests/: persisted_session_disk.rs  refresh_token_endpoint.rs  token_refresh_lifecycle.rs
src/lib/: AboutDialog.svelte  AuditDialog.svelte  AuthGate.svelte  AuthLoginForm.svelte  CipherDetail.svelte  CipherEditor.svelte  CipherList.svelte  ClipboardToast.svelte  ExportDialog.svelte  GeneratorDialog.svelte  Icon.svelte  ImportDialog.svelte  LoginEditor.svelte  Onboarding.svelte  PasswordInput.svelte  QrScanner.svelte  SessionBar.svelte  SshConfirmDialog.svelte  StatsDialog.svelte  Toolbar.svelte  TotpField.svelte  TotpField.svelte.test.ts  TwoFactorForm.svelte  UnlockForm.svelte  UpdateBanner.svelte  VaultSidebar.svelte  api.ts  auth.svelte.ts  auto-lock.svelte.ts  clipboard.svelte.ts  csv.test.ts  csv.ts  drag.svelte.ts  drag.test.ts  drag.ts  filter.test.ts  filter.ts  format.test.ts  format.ts  generator.test.ts  (+15 more)
src/routes/: +page.svelte
src/styles/: base.css  cipher-detail.css  cipher-list.css  dialogs.css  layout.css  tree.css
tests/e2e/: README.md  docker-compose.yml  wdio.conf.mjs
tests/e2e/helpers/: auth.mjs  lock.mjs  totp.mjs
tests/e2e/specs/: auto-lock.spec.mjs  cipher-types.spec.mjs  create-cipher.spec.mjs  delete-restore.spec.mjs  edit-cipher.spec.mjs  folder-cascade.spec.mjs  folder-rename-delete-path.spec.mjs  folder-rename-delete.spec.mjs  lock-unlock.spec.mjs  login-totp.spec.mjs  login.spec.mjs  logout.spec.mjs  permanent-delete.spec.mjs  share-cipher.spec.mjs  smoke.spec.mjs  ssh-passphrase-import.spec.mjs
