[package]
name = "clavix"
version = "0.3.0"
description = "Client desktop moderne pour Vaultwarden/Bitwarden"
authors = ["Clavix Labs"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clavix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
pbkdf2 = "0.12"
sha2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
uuid = { version = "1", features = ["v4"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
hkdf = "0.12"
rsa = "0.9"
sha1 = "0.10"
dirs = "6"
rand = "0.8"
rusqlite = { version = "0.40", features = ["bundled"] }
rayon = "1"
futures = "0.3"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519", "rsa", "encryption"] }
ed25519-dalek = "2"
zxcvbn = { version = "3", default-features = false }
ctap-hid-fido2 = "3.5"
parking_lot = "0.12"
# KDBX import (KeePass / KeePassXC native format). Default features are
# enough — no `save_kdbx4`, no TOTP helper. We do the entry walk and
# field extraction ourselves and pass plaintext fields up to the
# existing import flow.
keepass = "0.13"
# Only used to decode the bundled tray PNG into 8-bit RGBA at startup.
# `arboard` already pulls `image` transitively, so this declaration only
# exposes the API to us — it doesn't add a new crate to the build.
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
# Property-based tests on adversarial-input parsers — currently EncString
# (Bitwarden ciphertext format) and the WebAuthn challenge JSON. The
# point is to fuzz inputs the server can choose freely: they must never
# panic and never accept a malformed value.
proptest = { version = "1", default-features = false, features = ["std"] }

# Mock HTTP server for the integration tests that exercise the
# Vaultwarden client without booting a real container — covers the
# token-refresh and login round-trips plumbed by issue #24.
mockito = "1"
# Per-test isolated XDG_DATA_HOME so the integration tests that read
# / write session.json don't trample the dev machine.
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

# Optimise les dépendances même en mode dev : crucial pour la crypto (PBKDF2, Argon2id)
# qui serait sinon plusieurs secondes par login. Notre code reste compilé en debug.
[profile.dev.package."*"]
opt-level = 3

